--- a/LR.WebUI/package.json
+++ b/LR.WebUI/package.json
@@ -1,18 +1,18 @@
-﻿{
-  "name": "package",
-  "version": "1.0.0",
-  "private": true,
+{
+	"version": "1.0.0",
+	"name": "asp.net",
+	"private": true,
   "devDependencies": {
     "gulp": "3.9.1",
+    "es6-promise": "3.2.1",
+    "gulp-watch": "4.3.6",
     "del": "2.2.0",
     "gulp-concat": "2.6.0",
-    "gulp-autoprefixer": "3.1.0",
-    "gulp-clean-css": "2.0.8",
-    "gulp-watch": "4.3.6",
-    "merge-stream": "1.0.0",
-    "gulp-less": "3.1.0",
-    "es6-promise": "3.2.1",
     "gulp-uglify": "1.5.3",
-    "gulp-order": "1.1.1"
+    "merge-stream": "1.0.0",
+    "gulp-order": "1.1.1",
+    "gulp-less": "3.1.0",
+    "gulp-clean-css": "2.0.10",
+    "gulp-autoprefixer": "3.1.0"
   }
 }
