--- a/LR.WebUI/Web.config
+++ b/LR.WebUI/Web.config
@@ -8,8 +8,8 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="DbContext" providerName="System.Data.SqlClient" connectionString="Server=37.140.192.101;Database=u0198842_leavingrussia;User ID=u0198842_developer;Password=Luia124445#;Connection Timeout=30;" />
-    <!--<add name="DbContext" providerName="System.Data.SqlClient" connectionString="Data Source=.;Initial Catalog=u0198842_leavingrussia;Persist Security Info=True;User ID=sa;Password=Luia124445#" />-->
+    <!--<add name="DbContext" providerName="System.Data.SqlClient" connectionString="Server=37.140.192.101;Database=u0198842_leavingrussia;User ID=u0198842_developer;Password=Luia124445#;Connection Timeout=30;" />-->
+    <add name="DbContext" providerName="System.Data.SqlClient" connectionString="Data Source=.;Initial Catalog=u0198842_leavingrussia;Persist Security Info=True;User ID=sa;Password=Luia124445#" />
   </connectionStrings>
 
   <appSettings>
