--- a/LR.WebUI/Views/web.config
+++ b/LR.WebUI/Views/web.config
@@ -17,6 +17,7 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
         <add namespace="LR.WebUI" />
+        <add namespace="SX.WebCore.ViewModels" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
