--- a/LR.WebUI/LR.WebUI.csproj
+++ b/LR.WebUI/LR.WebUI.csproj
@@ -169,6 +169,8 @@
     <Content Include="content\static\temp\forest-585x390.jpg" />
     <Content Include="content\static\temp\iceland-585x390.jpg" />
     <Content Include="content\static\temp\iceland2-585x390.jpg" />
+    <Content Include="content\static\temp\lakekayak-585x390.jpg" />
+    <Content Include="content\static\temp\redwoods-585x390.jpg" />
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -177,15 +179,22 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\ArticlesController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\MaterialsController.cs" />
+    <Compile Include="Controllers\NewsController.cs" />
     <Compile Include="Controllers\PicturesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Infrastructure\DbContext.cs" />
+    <Compile Include="Infrastructure\Repositories\RepoArticle.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\Abstract\VMMaterial.cs" />
+    <Compile Include="ViewModels\VMArticle.cs" />
+    <Compile Include="ViewModels\VMNews.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
@@ -204,6 +213,8 @@
     <Content Include="Views\Shared\_AboutUs.cshtml" />
     <Content Include="Views\Shared\_JoinUs.cshtml" />
     <Content Include="Views\Pictures\_Last.cshtml" />
+    <Content Include="Views\Articles\_Last.cshtml" />
+    <Content Include="Views\Articles\_Categories.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -213,6 +224,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
+    <Folder Include="Views\News\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\SX.WebCore\SX.WebCore\SX.WebCore.csproj">
