--- a/LR.WebUI/bower.json
+++ b/LR.WebUI/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "LR.WebUI",
-  "homepage": "https://github.com/simlex-titul2005/GE",
+  "homepage": "https://github.com/simlex-titul2005/leavingrussia.ru",
   "authors": [
     "simlex-titul2005 <simlex.dev.2014@gmail.com>"
   ],
