--- a/LR.WebUI/Areas/Admin/Views/web.config
+++ b/LR.WebUI/Areas/Admin/Views/web.config
@@ -17,7 +17,9 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
         <add namespace="LR.WebUI" />
-        
+        <add namespace="SX.WebCore"/>
+        <add namespace="SX.WebCore.ViewModels"/>
+        <add namespace="SX.WebCore.HtmlHelpers"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
