--- a/LR.WebUI/LR.WebUI.csproj
+++ b/LR.WebUI/LR.WebUI.csproj
@@ -67,6 +67,14 @@
       <HintPath>..\packages\Microsoft.AspNet.Identity.Owin.2.2.1\lib\net45\Microsoft.AspNet.Identity.Owin.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.AspNet.SignalR.Core, Version=2.2.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.SignalR.Core.2.2.1\lib\net45\Microsoft.AspNet.SignalR.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.AspNet.SignalR.SystemWeb, Version=2.2.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.SignalR.SystemWeb.2.2.1\lib\net45\Microsoft.AspNet.SignalR.SystemWeb.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.1\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
       <Private>True</Private>
@@ -191,6 +199,7 @@
     <Content Include="content\static\temp\13741072_1134383363267451_809617021_n.jpg" />
     <Content Include="content\static\temp\about-widget.jpg" />
     <Content Include="content\static\temp\airplane-crash-780x516.jpg" />
+    <Content Include="content\static\temp\banner-header1.jpg" />
     <Content Include="content\static\temp\first-post.jpg" />
     <Content Include="content\static\temp\forest-585x390.jpg" />
     <Content Include="content\static\temp\iceland-585x390.jpg" />
@@ -199,6 +208,26 @@
     <Content Include="content\static\temp\my-journey.jpg" />
     <Content Include="content\static\temp\redwoods-585x390.jpg" />
     <Content Include="Global.asax" />
+    <Content Include="Areas\Admin\Views\Videos\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\Videos\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Videos\_GridView.cshtml" />
+    <Content Include="Areas\Admin\Views\Nets\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Nets\_GridView.cshtml" />
+    <Content Include="Areas\Admin\Views\ShareButtons\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\ShareButtons\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\ShareButtons\_GridView.cshtml" />
+    <Content Include="Areas\Admin\Views\Shared\EditorTemplates\Boolean.cshtml" />
+    <Content Include="Areas\Admin\Views\SeoTags\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\SeoTags\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\SeoTags\_EditForMaterial.cshtml" />
+    <Content Include="Areas\Admin\Views\SeoTags\_GeneralEdit.cshtml" />
+    <Content Include="Areas\Admin\Views\SeoTags\_GridView.cshtml" />
+    <Content Include="Areas\Admin\Views\SeoKeywords\_GridView.cshtml" />
+    <None Include="scripts\jquery-1.6.4-vsdoc.js" />
+    <Content Include="scripts\jquery-1.6.4.js" />
+    <Content Include="scripts\jquery-1.6.4.min.js" />
+    <Content Include="scripts\jquery.signalR-2.2.1.js" />
+    <Content Include="scripts\jquery.signalR-2.2.1.min.js" />
     <Content Include="scripts\site.js" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -210,13 +239,24 @@
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
     <Compile Include="Areas\Admin\Controllers\BaseController.cs" />
     <Compile Include="Areas\Admin\Controllers\HomeController.cs" />
+    <Compile Include="Areas\Admin\Controllers\NetsController.cs" />
+    <Compile Include="Areas\Admin\Controllers\PicturesController.cs" />
+    <Compile Include="Areas\Admin\Controllers\RequestsController.cs" />
+    <Compile Include="Areas\Admin\Controllers\SeoKeywordsController.cs" />
+    <Compile Include="Areas\Admin\Controllers\SeoTagsController.cs" />
+    <Compile Include="Areas\Admin\Controllers\ShareButtonsController.cs" />
     <Compile Include="Areas\Admin\Controllers\SiteSettingsController.cs" />
+    <Compile Include="Areas\Admin\Controllers\StatisticsController.cs" />
+    <Compile Include="Areas\Admin\Controllers\UserRolesController.cs" />
+    <Compile Include="Areas\Admin\Controllers\VideosController.cs" />
+    <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ArticlesController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MaterialsController.cs" />
     <Compile Include="Controllers\NewsController.cs" />
     <Compile Include="Controllers\PicturesController.cs" />
+    <Compile Include="Areas\Admin\Controllers\UsersController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -259,6 +299,27 @@
     <Content Include="Views\Shared\_SocialGroups.cshtml" />
     <Content Include="Views\Articles\_ForHome.cshtml" />
     <Content Include="Views\Articles\_Gallery.cshtml" />
+    <Content Include="Views\Account\Login.cshtml" />
+    <Content Include="Areas\Admin\Views\Pictures\AddMany.cshtml" />
+    <Content Include="Areas\Admin\Views\Pictures\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\Pictures\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Pictures\_FindGridView.cshtml" />
+    <Content Include="Areas\Admin\Views\Pictures\_FreePictures.cshtml" />
+    <Content Include="Areas\Admin\Views\Pictures\_GridView.cshtml" />
+    <Content Include="Areas\Admin\Views\UserRoles\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\UserRoles\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\UserRoles\_GridView.cshtml" />
+    <Content Include="Areas\Admin\Views\Users\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\Users\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Users\_GridView.cshtml" />
+    <Content Include="Areas\Admin\Views\Users\_UserInfo.cshtml" />
+    <Content Include="Areas\Admin\Views\Users\_UserReports.cshtml" />
+    <Content Include="Areas\Admin\Views\Users\_UserRoles.cshtml" />
+    <Content Include="Areas\Admin\Views\Users\_UsersOnSite.cshtml" />
+    <Content Include="Areas\Admin\Views\Requests\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Requests\_GridView.cshtml" />
+    <Content Include="Areas\Admin\Views\Statistics\UserLogins.cshtml" />
+    <Content Include="Areas\Admin\Views\Statistics\_UserLoginsGridView.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -267,8 +328,8 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Areas\Admin\Views\Base\" />
     <Folder Include="Areas\Admin\Views\SiteSettings\" />
+    <Folder Include="Areas\Admin\Views\UserLogins\" />
     <Folder Include="Models\" />
     <Folder Include="Views\News\" />
   </ItemGroup>
