--- a/LR.WebUI/Areas/Admin/Views/web.config
+++ b/LR.WebUI/Areas/Admin/Views/web.config
@@ -20,6 +20,7 @@
         <add namespace="SX.WebCore"/>
         <add namespace="SX.WebCore.ViewModels"/>
         <add namespace="SX.WebCore.HtmlHelpers"/>
+        <add namespace="LR.WebUI.ViewModels"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
