--- a/LR.WebUI/Web.config
+++ b/LR.WebUI/Web.config
@@ -19,6 +19,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <!--custom-->
     <add key="LoggingRequest" value="true" />
+    <add key="MaxPictureLength" value="512000" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
