--- a/LR.WebUI/Views/web.config
+++ b/LR.WebUI/Views/web.config
@@ -16,9 +16,12 @@
         <add namespace="System.Web.Mvc.Ajax" />
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
+        <!--custom-->
         <add namespace="LR.WebUI" />
         <add namespace="LR.WebUI.ViewModels" />
         <add namespace="SX.WebCore.ViewModels" />
+        <add namespace="SX.WebCore.HtmlHelpers"/>
+        <add namespace="LR.WebUI.ViewModels.Abstract"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
