--- a/LR.WebUI/LR.WebUI.csproj
+++ b/LR.WebUI/LR.WebUI.csproj
@@ -258,12 +258,7 @@
     <Content Include="Areas\Admin\Views\PictureLinks\_GridView.cshtml" />
     <Content Include="Areas\Admin\Views\PictureLinks\_GridViewNotLinked.cshtml" />
     <Content Include="Areas\Admin\Views\Shared\_NotMaterialPictures.cshtml" />
-    <None Include="scripts\jquery-1.6.4-vsdoc.js" />
-    <Content Include="scripts\jquery-1.6.4.js" />
-    <Content Include="scripts\jquery-1.6.4.min.js" />
-    <Content Include="scripts\jquery.signalR-2.2.1.js" />
-    <Content Include="scripts\jquery.signalR-2.2.1.min.js" />
-    <Content Include="scripts\site.js" />
+    <None Include="Properties\PublishProfiles\PROD.pubxml" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
