--- a/LR.WebUI/Web.Release.config
+++ b/LR.WebUI/Web.Release.config
@@ -3,19 +3,18 @@
 <!-- For more information on using web.config transformation visit http://go.microsoft.com/fwlink/?LinkId=125889 -->
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
-  <!--
-    In the example below, the "SetAttributes" transform will change the value of 
-    "connectionString" to use "ReleaseSQLServer" only when the "Match" locator 
-    finds an attribute "name" that has a value of "MyDB".
-    
-    <connectionStrings>
-      <add name="MyDB" 
-        connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True" 
-        xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
-    </connectionStrings>
-  -->
+  
+  <connectionStrings>
+    <add name="DbContext"
+      connectionString="Server=37.140.192.137;Database=u0230507_leavingrussia;User ID=u0230507_developer;Password=Luia124445#;Connection Timeout=30;"
+      xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+  </connectionStrings>
+  
   <system.web>
+    <trace enabled="false" xdt:Transform="Insert"/>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
+    
+    
     <!--
       In the example below, the "Replace" transform will replace the entire 
       <customErrors> section of your web.config file.
