--- a/LR.WebUI/Web.config
+++ b/LR.WebUI/Web.config
@@ -18,9 +18,14 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <!--custom-->
+    <!--admin-->
     <add key="LoggingRequest" value="true" />
     <add key="MaxPictureLength" value="512000" />
+    <!--no reply email-->
+    <add key="NoReplyEmail" value="noreply@leavingrussia.ru" />
+    <add key="NoReplyEmailPassword" value="Luia124445#leavingrussia.ru" />
+    <add key="NoReplySmtpHost" value="mail.leavingrussia.ru" />
+    <add key="NoReplySmtpPort" value="587" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
