--- a/LR.WebUI/LR.WebUI.csproj
+++ b/LR.WebUI/LR.WebUI.csproj
@@ -266,6 +266,9 @@
     <Content Include="Areas\Admin\Views\BannerGroups\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\BannerGroups\Index.cshtml" />
     <Content Include="Areas\Admin\Views\BannerGroups\_GridView.cshtml" />
+    <Content Include="Areas\Admin\Views\SiteNets\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\SiteNets\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\SiteNets\_GridView.cshtml" />
     <None Include="Properties\PublishProfiles\PROD.pubxml" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -291,6 +294,7 @@
     <Compile Include="Areas\Admin\Controllers\SeoKeywordsController.cs" />
     <Compile Include="Areas\Admin\Controllers\SeoTagsController.cs" />
     <Compile Include="Areas\Admin\Controllers\ShareButtonsController.cs" />
+    <Compile Include="Areas\Admin\Controllers\SiteNetsController.cs" />
     <Compile Include="Areas\Admin\Controllers\SiteSettingsController.cs" />
     <Compile Include="Areas\Admin\Controllers\StatisticsController.cs" />
     <Compile Include="Areas\Admin\Controllers\UserRolesController.cs" />
@@ -308,6 +312,7 @@
     <Compile Include="Controllers\NewsController.cs" />
     <Compile Include="Controllers\PicturesController.cs" />
     <Compile Include="Areas\Admin\Controllers\UsersController.cs" />
+    <Compile Include="Controllers\SiteNetsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -335,7 +340,7 @@
     <Content Include="Views\Shared\_Header.cshtml" />
     <Content Include="Views\Shared\_Navbar.cshtml" />
     <Content Include="Views\Shared\_AboutUs.cshtml" />
-    <Content Include="Views\Shared\_JoinUs.cshtml" />
+    <Content Include="Views\SiteNets\_JoinUs.cshtml" />
     <Content Include="Views\Pictures\_Last.cshtml" />
     <Content Include="Views\Articles\_Last.cshtml" />
     <Content Include="Views\MaterialCategories\_Categories.cshtml" />
@@ -350,7 +355,7 @@
     <Content Include="Views\Articles\_Subscribe.cshtml" />
     <Content Include="Views\Pictures\_Best.cshtml" />
     <Content Include="Views\Shared\_Footer.cshtml" />
-    <Content Include="Views\Shared\_SocialGroups.cshtml" />
+    <Content Include="Views\SiteNets\_SocialGroups.cshtml" />
     <Content Include="Views\Articles\_ForHome.cshtml" />
     <Content Include="Views\Articles\_Gallery.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
@@ -397,6 +402,7 @@
       <Name>SX.WebCore</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
