--- a/LR.WebUI/Web.config
+++ b/LR.WebUI/Web.config
@@ -10,7 +10,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="DbContext" connectionString="Data Source=.;Initial Catalog=leavingrussia.ru;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DbContext" connectionString="Data Source=.;Initial Catalog=u0230507_leavingrussia;Integrated Security=True" providerName="System.Data.SqlClient" />
     <!--<add name="DbContext" connectionString="Server=37.140.192.137;Database=u0230507_leavingrussia;User ID=u0230507_developer;Password=Luia124445#;Connection Timeout=30;" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
