--- a/LR.WebUI/LR.WebUI.csproj
+++ b/LR.WebUI/LR.WebUI.csproj
@@ -266,30 +266,10 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
     <Compile Include="Areas\Admin\Controllers\ArticlesController.cs" />
-    <Compile Include="Areas\Admin\Controllers\BannedUrlsController.cs" />
-    <Compile Include="Areas\Admin\Controllers\BannerGroupsController.cs" />
-    <Compile Include="Areas\Admin\Controllers\BannersController.cs" />
     <Compile Include="Areas\Admin\Controllers\BaseController.cs" />
     <Compile Include="Areas\Admin\Controllers\HomeController.cs" />
-    <Compile Include="Areas\Admin\Controllers\MaterialCategoriesController.cs" />
     <Compile Include="Areas\Admin\Controllers\MaterialsController.cs" />
-    <Compile Include="Areas\Admin\Controllers\MaterialTagsController.cs" />
-    <Compile Include="Areas\Admin\Controllers\NetsController.cs" />
     <Compile Include="Areas\Admin\Controllers\PicturesController.cs" />
-    <Compile Include="Areas\Admin\Controllers\RedirectsController.cs" />
-    <Compile Include="Areas\Admin\Controllers\RequestsController.cs" />
-    <Compile Include="Areas\Admin\Controllers\SeoController.cs" />
-    <Compile Include="Areas\Admin\Controllers\SeoKeywordsController.cs" />
-    <Compile Include="Areas\Admin\Controllers\SeoTagsController.cs" />
-    <Compile Include="Areas\Admin\Controllers\ShareButtonsController.cs" />
-    <Compile Include="Areas\Admin\Controllers\SiteNetsController.cs" />
-    <Compile Include="Areas\Admin\Controllers\SiteSettingsController.cs" />
-    <Compile Include="Areas\Admin\Controllers\StatisticsController.cs" />
-    <Compile Include="Areas\Admin\Controllers\UserRolesController.cs" />
-    <Compile Include="Areas\Admin\Controllers\ValutesController.cs" />
-    <Compile Include="Areas\Admin\Controllers\PictureLinksController.cs" />
-    <Compile Include="Areas\Admin\Controllers\VideoLinksController.cs" />
-    <Compile Include="Areas\Admin\Controllers\VideosController.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ArticlesController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
@@ -299,7 +279,6 @@
     <Compile Include="Controllers\MaterialsController.cs" />
     <Compile Include="Controllers\NewsController.cs" />
     <Compile Include="Controllers\PicturesController.cs" />
-    <Compile Include="Areas\Admin\Controllers\UsersController.cs" />
     <Compile Include="Controllers\SiteNetsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -389,6 +368,7 @@
       <Name>SX.WebCore</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
@@ -421,6 +401,10 @@
     <Error Condition="!Exists('..\packages\Microsoft.Net.Compilers.1.3.2\build\Microsoft.Net.Compilers.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.Net.Compilers.1.3.2\build\Microsoft.Net.Compilers.props'))" />
     <Error Condition="!Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.1\build\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.1\build\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props'))" />
   </Target>
+  <PropertyGroup>
+    <PostBuildEvent>
+    </PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
