--- a/LR.WebUI/LR.WebUI.csproj
+++ b/LR.WebUI/LR.WebUI.csproj
@@ -257,6 +257,9 @@
     <Content Include="Areas\Admin\Views\SiteNets\Index.cshtml" />
     <Content Include="Areas\Admin\Views\SiteNets\_GridView.cshtml" />
     <Content Include="Areas\Admin\Views\SiteSettings\ReleaseNotes.cshtml" />
+    <Content Include="Areas\Admin\Views\AffiliateLinks\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\AffiliateLinks\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\AffiliateLinks\_GridView.cshtml" />
     <None Include="Properties\PublishProfiles\PROD.pubxml" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -268,6 +271,7 @@
     <Compile Include="Areas\Admin\Controllers\ArticlesController.cs" />
     <Compile Include="Areas\Admin\Controllers\BaseController.cs" />
     <Compile Include="Areas\Admin\Controllers\HomeController.cs" />
+    <Compile Include="Areas\Admin\Controllers\MaterialCategoriesController.cs" />
     <Compile Include="Areas\Admin\Controllers\MaterialsController.cs" />
     <Compile Include="Areas\Admin\Controllers\PicturesController.cs" />
     <Compile Include="Controllers\ArticlesController.cs" />
@@ -352,6 +356,7 @@
     <Content Include="Views\Account\DisplayEmail.cshtml" />
     <Content Include="Views\Account\ConfirmEmail.cshtml" />
     <Content Include="Views\Articles\List.cshtml" />
+    <Content Include="Views\SiteNets\_ForHeader.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -365,7 +370,6 @@
       <Name>SX.WebCore</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
