--- a/LR.WebUI/LR.WebUI.csproj
+++ b/LR.WebUI/LR.WebUI.csproj
@@ -175,10 +175,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\Admin\content\dist\css\bootstrap-datetimepicker.min.css" />
-    <Content Include="Areas\Admin\content\dist\css\lightbox.min.css">
-      <Generator>RazorGenerator</Generator>
-      <LastGenOutput>lightbox.min.generated.cs</LastGenOutput>
-    </Content>
+    <Content Include="Areas\Admin\content\dist\css\lightbox.min.css" />
     <Content Include="Areas\Admin\content\dist\css\morris.css" />
     <Content Include="Areas\Admin\content\dist\css\site.min.css" />
     <Content Include="Areas\Admin\content\dist\fonts\fontawesome-webfont.eot" />
