--- a/LR.WebUI/LR.WebUI.csproj
+++ b/LR.WebUI/LR.WebUI.csproj
@@ -178,12 +178,7 @@
     <Content Include="Areas\Admin\content\dist\css\lightbox.min.css" />
     <Content Include="Areas\Admin\content\dist\css\morris.css" />
     <Content Include="Areas\Admin\content\dist\css\site.min.css" />
-    <Content Include="Areas\Admin\content\dist\fonts\fontawesome-webfont.eot" />
     <Content Include="Areas\Admin\content\dist\fonts\fontawesome-webfont.svg" />
-    <Content Include="Areas\Admin\content\dist\fonts\fontawesome-webfont.ttf" />
-    <Content Include="Areas\Admin\content\dist\fonts\fontawesome-webfont.woff" />
-    <Content Include="Areas\Admin\content\dist\fonts\fontawesome-webfont.woff2" />
-    <Content Include="Areas\Admin\content\dist\fonts\FontAwesome.otf" />
     <Content Include="Areas\Admin\content\dist\images\close.png" />
     <Content Include="Areas\Admin\content\dist\images\loading.gif" />
     <Content Include="Areas\Admin\content\dist\images\next.png" />
@@ -197,6 +192,9 @@
     <Content Include="Areas\Admin\content\dist\js\morris.min.js" />
     <Content Include="Areas\Admin\content\dist\js\raphael.min.js" />
     <Content Include="Areas\Admin\content\dist\js\site.min.js" />
+    <Content Include="Areas\Admin\scripts\site.js" />
+    <Content Include="Areas\Admin\scripts\sx-gv.js" />
+    <Content Include="Areas\Admin\scripts\sx-gvl.js" />
     <Content Include="content\dist\css\site.min.css" />
     <Content Include="content\dist\fonts\fontawesome-webfont.svg" />
     <Content Include="content\dist\js\jquery.unobtrusive-ajax.min.js" />
@@ -207,10 +205,23 @@
     <Content Include="content\static\incognito.jpg" />
     <Content Include="content\static\logo.png" />
     <Content Include="Global.asax" />
-    <Content Include="Areas\Admin\Views\Articles\EditorTemplates\VMArticle.cshtml" />
+    <Content Include="Areas\Admin\content\dist\fonts\fontawesome-webfont.eot" />
+    <Content Include="Areas\Admin\content\dist\fonts\fontawesome-webfont.ttf" />
+    <Content Include="Areas\Admin\content\dist\fonts\fontawesome-webfont.woff" />
+    <Content Include="Areas\Admin\content\dist\fonts\fontawesome-webfont.woff2" />
+    <Content Include="Areas\Admin\content\dist\fonts\FontAwesome.otf" />
+    <Content Include="Areas\Admin\less\colors.less" />
+    <Content Include="Areas\Admin\less\sb-admin-2.less" />
+    <Content Include="Areas\Admin\less\site.less" />
+    <Content Include="Areas\Admin\less\sizes.less" />
+    <Content Include="Areas\Admin\less\sx-gv.less" />
+    <Content Include="Areas\Admin\less\sx-gvl.less" />
+    <Content Include="Areas\Admin\less\sx-tv.less" />
+    <Content Include="Areas\Admin\Views\AnalizatorSessions\_GridView.cshtml" />
     <Content Include="Areas\Admin\Views\Analizator\Index.cshtml" />
     <Content Include="Areas\Admin\Views\Analizator\_Session.cshtml" />
-    <Content Include="Areas\Admin\Views\AnalizatorSessions\_GridView.cshtml" />
+    <Content Include="Areas\Admin\Views\Articles\EditorTemplates\VMArticle.cshtml" />
+    <Content Include="Areas\Admin\Views\web.config" />
     <None Include="Properties\PublishProfiles\PROD.pubxml" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
@@ -293,7 +304,6 @@
     <Content Include="Views\Pictures\_Last.cshtml" />
     <Content Include="Views\Articles\_Last.cshtml" />
     <Content Include="Views\MaterialCategories\_Categories.cshtml" />
-    <Content Include="Areas\Admin\Views\web.config" />
     <Content Include="Views\Shared\_PreFooter.cshtml" />
     <Content Include="Views\Articles\_ReadingMaterial.cshtml" />
     <Content Include="Views\Articles\_Popular.cshtml" />
@@ -323,6 +333,10 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\SX.WebCore\SX.WebCore.Static\SX.WebCore.Static.csproj">
+      <Project>{743adb7f-3413-4789-8d46-b7c902da7a35}</Project>
+      <Name>SX.WebCore.Static</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\SX.WebCore\SX.WebCore\SX.WebCore.csproj">
       <Project>{daf1a092-ded8-4c43-b08d-20e55c6f03a2}</Project>
       <Name>SX.WebCore</Name>
